--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.html
@@ -1,6 +1,6 @@
 <div mat-dialog-title fxLayout="row" fxLayoutAlign="space-between">
 	<div class="mat-h2" [translate]="'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.TITLE'"></div>
-	<button mat-button (click)="dialogRef.close();" tabindex="-1">
+	<button mat-icon-button color="warn" (click)="dialogRef.close();" tabindex="-1">
 		<mat-icon>close</mat-icon>
 	</button>
 </div>
@@ -8,8 +8,13 @@
 <div mat-dialog-content>
 
 	<mat-tab-group mat-align-tabs="center" [selectedIndex]="selectedTab" (selectedIndexChange)="setSelectedTab($event)">
-		<mat-tab
-			label="{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.NEW_VACCINE_TAB' | translate }}">
+		<mat-tab>
+			<ng-template mat-tab-label>
+				<span class="color-primary">
+					{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.NEW_VACCINE_TAB' | translate |
+					uppercase }}
+				</span>
+			</ng-template>
 
 			<form [formGroup]="billableForm" (submit)="submit(vaccineInput)">
 				<div fxLayout="column">
@@ -28,8 +33,8 @@
 						<mat-error [translate]="'forms.REQUIRED'"></mat-error>
 					</mat-form-field>
 					<div #vaccineInput>
-						<ng-container *ngIf="newVaccineSnomedConcept else searchImmunizations">
-							<div fxLayout="column" fxFlex="100%">
+						<div fxLayout="column" fxFlex="100%">
+							<ng-container *ngIf="newVaccineSnomedConcept else searchImmunizations">
 								<mat-label>
 									{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.IMMUNIZATION' |
 									translate
@@ -37,15 +42,15 @@
 								</mat-label>
 								<mat-form-field appearance="outline">
 									<input matInput required readonly formControlName="snomed"
-										matTooltip="{{ newVaccineSnomedConcept.pt }}" class="capitalize-first-letter">
-									<button type="button" id="clear" mat-button matSuffix color="warn" mat-icon-button
+										matTooltip="{{ newVaccineSnomedConcept.pt }}">
+									<button type="button" mat-button matSuffix color="warn" mat-icon-button
 										(click)="resetConceptBillableForm()">
 										<mat-icon>close</mat-icon>
 									</button>
 									<mat-error [translate]="'forms.REQUIRED'"></mat-error>
 								</mat-form-field>
-							</div>
-						</ng-container>
+							</ng-container>
+						</div>
 
 						<ng-template #searchImmunizations>
 							<app-concepts-search
@@ -56,7 +61,7 @@
 								[translate]="'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.NOT_VACCINE_SELECTED_ERROR'"
 								*ngIf="!searchingNew && tryToSubmit">
 							</div>
-							<div class="spinner">
+							<div class="spinner" fxLayoutAlign="center center">
 								<mat-spinner diameter="70" color="primary" *ngIf="searchingNew"></mat-spinner>
 							</div>
 							<app-table *ngIf="!searchingNew" [model]="conceptsResultsTable"></app-table>
@@ -69,7 +74,10 @@
 					<mat-form-field appearance="outline">
 						<mat-select formControlName="condition"
 							(selectionChange)="loadSchemes($event.value,this.billableForm)">
-							<mat-option [value]="null"></mat-option>
+							<mat-option [value]="null" style="color:gray;">
+								- {{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.NULL_OPTION_MESSAGE'
+								| translate }} -
+							</mat-option>
 							<mat-option *ngFor="let condition of conditions; index as i" [value]="i">
 								{{ condition.description }}
 							</mat-option>
@@ -77,7 +85,7 @@
 					</mat-form-field>
 
 					<div fxLayout="row" fxLayoutAlign="space-between">
-						<div fxLayout="column" fxFlex="50%">
+						<div fxLayout="column" fxFlex="47.5">
 							<mat-label>
 								{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.SCHEME' | translate }}
 							</mat-label>
@@ -93,7 +101,7 @@
 								</mat-error>
 							</mat-form-field>
 						</div>
-						<div fxLayout="column" fxFlex="50%">
+						<div fxLayout="column" fxFlex="47.5">
 							<mat-label>
 								{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.DOSE' | translate }}
 							</mat-label>
@@ -135,8 +143,13 @@
 
 		</mat-tab>
 
-		<mat-tab
-			label="{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.PREVIOUS_VACCINE_TAB' | translate }}">
+		<mat-tab>
+			<ng-template mat-tab-label>
+				<span class="color-primary">
+					{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.PREVIOUS_VACCINE_TAB' | translate |
+					uppercase }}
+				</span>
+			</ng-template>
 
 			<form [formGroup]="previousForm" (submit)="submitPreviousForm(previousVaccineInput)">
 				<div fxLayout="column">
@@ -157,22 +170,24 @@
 					</mat-form-field>
 
 					<div #previousVaccineInput>
-						<ng-container *ngIf="previousVaccineSnomedConcept else searchImmunizationsPreviousForm">
-							<mat-label>
-								{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.IMMUNIZATION' |
-								translate
-								}}
-							</mat-label>
-							<mat-form-field appearance="outline">
-								<input matInput required readonly formControlName="snomed"
-									matTooltip="{{ previousVaccineSnomedConcept.pt }}" class="capitalize-first-letter">
-								<button type="button" id="clear" mat-button matSuffix color="warn" mat-icon-button
-									(click)="resetConceptPreviousForm()">
-									<mat-icon>close</mat-icon>
-								</button>
-								<mat-error [translate]="'forms.REQUIRED'"></mat-error>
-							</mat-form-field>
-						</ng-container>
+						<div fxLayout="column" fxFlex="100%">
+							<ng-container *ngIf="previousVaccineSnomedConcept else searchImmunizationsPreviousForm">
+								<mat-label>
+									{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.IMMUNIZATION' |
+									translate
+									}}
+								</mat-label>
+								<mat-form-field appearance="outline">
+									<input matInput required readonly formControlName="snomed"
+										matTooltip="{{ previousVaccineSnomedConcept.pt }}">
+									<button type="button" mat-button matSuffix color="warn" mat-icon-button
+										(click)="resetConceptPreviousForm()">
+										<mat-icon>close</mat-icon>
+									</button>
+									<mat-error [translate]="'forms.REQUIRED'"></mat-error>
+								</mat-form-field>
+							</ng-container>
+						</div>
 
 						<ng-template #searchImmunizationsPreviousForm>
 							<app-concepts-search
@@ -183,7 +198,7 @@
 								[translate]="'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.NOT_VACCINE_SELECTED_ERROR'"
 								*ngIf="!searchingPrevious && tryToSubmitPrevious">
 							</div>
-							<div class="spinner">
+							<div class="spinner" fxLayoutAlign="center center">
 								<mat-spinner diameter="70" color="primary" *ngIf="searchingPrevious"></mat-spinner>
 							</div>
 							<app-table *ngIf="!searchingPrevious && !previousVaccineSnomedConcept"
@@ -197,7 +212,10 @@
 					<mat-form-field appearance="outline">
 						<mat-select formControlName="condition"
 							(selectionChange)="loadSchemes($event.value,this.previousForm)">
-							<mat-option [value]="null"></mat-option>
+							<mat-option [value]="null" style="color:gray;">
+								- {{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.NULL_OPTION_MESSAGE'
+								| translate }} -
+							</mat-option>
 							<mat-option *ngFor="let condition of conditions; index as i" [value]="i">
 								{{ condition.description }}
 							</mat-option>
@@ -205,7 +223,7 @@
 					</mat-form-field>
 
 					<div fxLayout="row" fxLayoutAlign="space-between">
-						<div fxLayout="column" fxFlex="50%">
+						<div fxLayout="column" fxFlex="47.5">
 							<mat-label>
 								{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.SCHEME' | translate }}
 							</mat-label>
@@ -221,7 +239,7 @@
 								</mat-error>
 							</mat-form-field>
 						</div>
-						<div fxLayout="column" fxFlex="50%">
+						<div fxLayout="column" fxFlex="47.5">
 							<mat-label>
 								{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.agregar_vacuna.DOSE' | translate }}
 							</mat-label>
