--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.scss
@@ -1,18 +1,24 @@
 .dose {
-    border-radius: 5px;
-    padding: 5px;
-	background-color:#2687C533;
-	color:#2687C5;
+	border-radius: 5px;
+	background-color: #2687c533;
+	color: #2687c5;
+	padding: 0 5px;
 }
 
 .no-info {
 	padding: 20px 5px;
-    text-align: center;
-    font-weight: bold;
-    color: #A8A8A8;}
+	text-align: center;
+	font-weight: bold;
+	color: #a8a8a8;
+}
 
 .vaccines-table-header-text {
 	color: rgba(0, 0, 0, 0.54);
 	font-size: 12px;
 	font-weight: 500;
+	padding: 16px 0 8px 24px;
+}
+
+.mat-values {
+	padding: 0 5px 0 24px;
 }
